[project]
name = "code-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Raj Bhatt",email = "rajbhatt16520@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=1.0.5,<2.0.0)",
    "langchain-core (>=1.0.4,<2.0.0)",
    "langchain-openai (>=1.0.2,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "openai (>=2.8.0,<3.0.0)",
    "pinecone-client (>=6.0.0,<7.0.0)",
    "fastapi (>=0.121.2,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
